--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -156,8 +156,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} * 1.25);
-    max-width:         calc(#{$content-width} * 1.25);
+    max-width: -webkit-calc(#{$content-width} * 1.35);
+    max-width:         calc(#{$content-width} * 1.35);
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -165,14 +165,20 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        max-width: -webkit-calc(#{$content-width} + (#{$spacing-unit}));
+        max-width:         calc(#{$content-width} + (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
 }
 
-
+.header-wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    //padding-right: $spacing-unit * 1.5;
+    //padding-left: $spacing-unit * 1.5;
+    @extend %clearfix;
+}
 
 /**
  * Clearfix
