--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,6 +37,11 @@
         left: 70px;
         top: 20px;
         line-height: 1.125;
+        @include media-query($on-palm) {
+            content: 'Injury form';
+            left: 0;
+            top: 65px;
+        }
     }
 }
 
@@ -110,7 +115,7 @@
     }
 
     @include media-query($on-palm) {
-        text-align: center;
+        text-align: left;
         background: darken(#1b75bc, 5%);
         @include clearfix;
         clear: both;
