--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -132,6 +132,14 @@
     }
 }
 
+.home-title {
+    font-size: 24px;
+    color: grey;
+    font-weight: 300;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
 /**
  * Site footer
  */
